# wirender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  render.cpp  render.hpp  run_basic_test.bat  wirender.cpp  wirender.hpp
assets/: texture.frag  texture.vert  texturef.spirv  texturev.spirv
include/: wiender.hpp  wiender_core.hpp  wiender_mac_os.hpp  wiender_wayland.hpp  wiender_windows.hpp  wiender_xlib.hpp
includes/pickmelib/: inplacevector.hpp  reado.hpp  sparse_vector.hpp
src/: wiender.cpp  wiender_implement_core.hpp
src/vulkan_implement/: spirv_reflection_support.hpp  vulkan_wiender.hpp
tests/basic_test/: basic_test.cpp
tests/batch_example/: batch_renderer.cpp  batch_renderer.hpp
tests/tests_includes/pickmelib/: inplacevector.hpp
tests/tests_includes/ps_window/: ps_window.cppm  ps_window.hpp  ps_window_win.hpp
